[project]
name = "DLT-Corpus"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pyyaml~=6.0.2",
    "transformers~=4.57.0",
    "datasets~=3.5.0",
    "requests~=2.32.3",
    "huggingface-hub[cli]~=0.35.3",
    "scikit-learn==1.6.1",
    "pandas~=2.2.3",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "torch~=2.7.0",
    "torchmetrics~=1.6.0",
    "evaluate==0.4.5",
    "seqeval==1.2.2",
    "ftfy==6.3.1",
    "aiofiles~=24.1.0",
    "PyMuPDF==1.24.10",
    "pymupdf4llm~=0.0.17",
    "vllm~=0.9.2",
    "jupyter~=1.1.1",
    "python-dotenv~=1.1.1",
    "timm~=1.0.16",
    "numba~=0.61.2",
    "accelerate>=1.8.1",
    "tensorboardX~=2.6.4",
    "tensorboard~=2.19.0",
    "torch-optimi~=0.3.0",
    "peft~=0.16.0",
    "pandas-stubs==2.3.0.250703",
    "fake-useragent>=2.2.0",
    "lxml>=6.0.0",
    "selenium>=4.34.2",
    "markitdown[html]>=0.1.2",
    "asyncio>=3.4.3",
    "polars>=1.33.1",
    "lingua-language-detector>=2.1.1",
    "wandb>=0.22.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
cuda = [
    "flash-attn==2.8.2",
]

[tool.uv]
index-url = "https://pypi.org/simple"
no-build-isolation-package = ["flash-attn"]

[tool.uv.pip]
extra-index-url = ["https://pypi.org/simple"]
